--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -1,1 +1,5 @@
+@import "utils/_variable.scss";
 @import "utils/_reset.scss";
+
+@import "composants/_header.scss";
+@import "composants/_popup.scss";
