--- a/Sass/utils/_variable.scss
+++ b/Sass/utils/_variable.scss
@@ -1,31 +1,30 @@
 @font-face {
-    font-family: 'unashamed';
-    src: url(./police/unashamed/UnashamedDemo.otf);}
+    font-family: 'cheddar';
+    src: url(../../public/police/Cheddar\ Gothic\ Sans.otf);}
 
 @font-face {
     font-family: 'opendyslexic';
-    src: url(./police/opendyslexic/OpenDyslexic-Regular.otf);}
+    src: url(../../public/police/OpenDyslexic-Regular.otf);}
     
-$couleur-primaire: #E68A08;
-$couleur-secondaire: #8F5BFE;
-$couleur-tertiaire: #F3E9F1; 
-$couleur-tertiaire-fonce: #f3c8ea; 
-$couleur-tertiaire-claire: #fcfafb; 
+$couleur-primaire: #0B717F;
+$couleur-secondaire: #102832;
+$couleur-tertiaire: #D4566C; 
 $couleur-ombre: #aaa0a8; 
 
-$font-titre: 'unashamed';
+$font-titre: 'cheddar';
 $font-texte: 'opendyslexic';
-$couleur-texte: #261624;
-
-$degrade: linear-gradient(0deg, $couleur-primaire, $couleur-secondaire);
-$couleur-secondaire-transparent: #8f5bfe44;
+$couleur-texte: #F8EBCB;
 
 *
 {
-    font-family: 'modern', Arial, serif;
+    font-family: $font-texte, Arial, serif;
     color: black;   
     text-decoration: none;
     background-color: transparent;
     margin: 0;
     border: none;
+    list-style-type: none;
+}
+body{
+    background-color: $couleur-texte;
 }
