--- a/Sass/layout/_prog.scss
+++ b/Sass/layout/_prog.scss
@@ -1,5 +1,4 @@
-.Sprog{
-    margin: 3%;
+.prog{
     .row{
         display: flex;
         .jour{
@@ -15,8 +14,8 @@
                 width: 15%;
                 float: right;
             }
-            span{
-                margin-bottom: 3%;
+            .button{
+                margin-left: 50%;
             }
         }
     }
