--- a/Sass/composants/_popup.scss
+++ b/Sass/composants/_popup.scss
@@ -1,19 +1,5 @@
-.prog{
-  .button {
-    margin-top: 5%;
-    margin-left: 35%;
-    padding: 0.5%;
-    width: 30%;
-    border: 3px solid $couleur-secondaire;
-    box-shadow: 5px 5px 4px $couleur-primaire;
-    background-color: $couleur-texte;
-    cursor: pointer;
-  }
-  .button:hover {
-    color: $couleur-primaire;
-  }
-  
-  .overlay {
+/*pop up*/
+.overlay {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -23,61 +9,50 @@
     transition: opacity 500ms;
     visibility: hidden;
     opacity: 0;
-  }
-  .overlay:target {
-    visibility: visible;
-    opacity: 1;
-  }
-  
-  .popup {
-    margin: 70px auto;
-    padding: 20px;
-    background: #fff;
-    border-radius: 5px;
-    width: 50%;
-    position: relative;
-    transition: all 5s ease-in-out;
-  }
-  
-  .popup h2 {
-    margin-top: 0;
-  }
-  .popup .close {
-    transition: all 200ms;
-    text-decoration: none;
-    color: #333;
-  }
-  .popup .close:hover {
-    color: $couleur-primaire;
-  }
-  .popup .content {
-    max-height: 30%;
-    overflow: auto;
-  }
-  form{
-    display: flex;
-    flex-direction: column;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    input{
-      border: 3px solid $couleur-secondaire;
-      width: 50%;
+    &:target{
+        visibility: visible;
+        opacity: 1;
+    }  
+    .popup {
+        margin: 70px auto;
+        padding: 20px;
+        background: #fff;
+        border-radius: 5px;
+        width: 50%;
+        position: relative;
+        transition: all 5s ease-in-out;
+        h2 {
+            margin-top: 0;
+        }
+        .content {
+            max-height: 30%;
+            overflow: auto;
+            form{
+                display: flex;
+                flex-direction: column;
+                margin-top: 3%;
+                margin-bottom: 3%;
+                input{
+                    border: 3px solid $couleur-secondaire;
+                    width: 50%;
+                }
+            }
+        }  
+        .bouton{
+            margin: 5%;
+            width: 50%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            a{
+                margin-top: 3%;
+                margin-left: 35%;
+            }
+        }
     }
-  }
-  .bouton{
-    margin: 5%;
-    width: 50%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    a,button{
-      size: 1em;
-      margin-top: 3%;
-      margin-left: 35%;
-      padding: 1%;
-      border: 3px solid $couleur-secondaire;
-      box-shadow: 5px 5px 4px $couleur-primaire;
-      cursor: pointer;
-    }
-  }
 }
+
+
+
+
+
