--- a/Sass/composants/_header.scss
+++ b/Sass/composants/_header.scss
@@ -1,6 +1,7 @@
+/*header*/
 header{
     background-color: $couleur-secondaire;    
-    .pc{
+    div{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
